Improve grpc-client
